Updated the radio buttons container to prevent cutting off on mobile.

--- a/src/js/components/Exercise2/Exercise2.module.scss
+++ b/src/js/components/Exercise2/Exercise2.module.scss
@@ -28,6 +28,7 @@
 
         fieldset {
           border: none;
+          display: flex;
 
           label {
             margin-right: 10px;
